# modelops_studio_saas

./: .env.example  .gitignore  Makefile  README.md  RELEASE_NOTES_v1.08.md  RELEASE_NOTES_v1.2.1.md  RELEASE_NOTES_v1.2.2.md  RELEASE_NOTES_v1.2.md  docker-compose.feast-mt.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  update.md
config/: compute_profiles.yaml
docs/: API_EXAMPLES.md  ARCHITECTURE.md  DIAGRAMS.mmd  ENVIRONMENTS.md  FAQ.md  FEAST_MULTI_TENANT.md  GPU.md  GPU_QUEUE.md  GPU_SCHEDULER.md  KUBEFLOW_INTEGRATION.md  LLM_MODULES.md  OBSERVABILITY.md  PROCESSING.md  PROJECT_OVERVIEW.md  README.md  SAGEMAKER_COMPARISON.md  SERVING.md  UPDATES.md
libs/common/: pyproject.toml
libs/common/mlops_common/: app_factory.py  context.py  db.py  errors.py  logging.py  nats_client.py  otel.py  tenancy.py
libs/common/mlops_common/middleware/: idempotency.py  request_logging.py  tenancy.py
migrations/: 0001_core.sql  0002_idempotency.sql  0003_gpu_jobs.sql  0004_gpu_scheduler.sql  0005_feature_store_tenants.sql  0006_llm_modules.sql  0007_endpoints_runtime_config.sql
openapi/: README.md  artifact-service.openapi.yaml  deployment-service.openapi.yaml  feature-store-service.openapi.yaml  gpu-jobs-service.openapi.yaml  gpu-scheduler-service.openapi.yaml  llm-embeddings-service.openapi.yaml  llm-eval-service.openapi.yaml  llm-labeling-service.openapi.yaml  llm-rag-service.openapi.yaml  metering-service.openapi.yaml  registry-service.openapi.yaml  run-service.openapi.yaml  stream-ingest-service.openapi.yaml  template-service.openapi.yaml  (+1 more)
(+395 files in other folders)
